<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="100dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:fontFamily="Arial"
            android:gravity="center"
            android:layout_marginBottom="70dp"/>


        <android.support.design.widget.TextInputEditText
            android:id="@+id/signUpemail"
            android:hint="@string/email_hint"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signUpPassword"
            android:hint="@string/password_hint"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signUpComfirPassword"
            android:hint="@string/confirm_password_hint"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signUpCreatAccount"
            android:text="@string/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/already_member"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/signUpLogin"
                android:text="Login"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>





</LinearLayout>
